<resources>
    <string name="app_name">Imenik FINAL</string>
    <string name="open_drawer">Drawer Opened</string>
    <string name="close_drawer">Drawer Closed</string>
    <string name="dodaj_glumca">Dodaj Kontakt</string>
    <string name="aplikacija_o_glumcima_u_ovoj_aplikaciji_mozete_videti_listu_glumaca_njihove_podatke_i_filmove_u_kojima_je_glumio_milose_samo_jedan_podsetnik_naravno_ako_je_aplikacija_dobra_za_plus_sto_ste_rekli_da_mozete_dati">Aplikacija o Kontaktima, prikazuje listu kontakta, njegove brojeve i koji je tip broja.</string>
    <string name="nije_dovoljno_dobro_p">ZATVORI DIJALOG</string>
    <string name="ovaj_dialog_ce_se_prikazati_samo_prvi_i_jedini_put_kada_je_aplikacija_instalirana_i_pokrenuta_osim_u_slucaju_reinstalacije">Ovaj Dialog ce se prikazati samo prvi i jedini put kada je aplikacija instalirana i pokrenuta osim u slucaju reinstalacije !</string>
    <string name="dialog_about_title">O Aplikaciji</string>
    <string name="dialog_about_message">Stevan Mihalic</string>
    <string name="dialog_about_yes">Potvrdi</string>
    <string name="dialog_about_no">Izadji</string>
    <string name="naziv_kontakta">Naziv Kontakta</string>
    <string name="adresa_kontakta">Adresa Kontakta</string>
    <string name="otvori_galeriju_za_sliku">OTVORI GALERIJU ZA SLIKU</string>
    <string name="potvrdi">Confirm</string>
    <string name="odustani">Cancel</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="add_movie">Dodaj Broj</string>
    <string name="unesite_broj_telefona">Unesite broj Telefona</string>
    <string name="izabrite_tip_telefona">Izabrite tip Telefona:</string>
    <string name="nov_naziv_kontakta">Nov Naziv Kontakta</string>
    <string name="nova_adresa_kontakta">Nova Adresa Kontakta</string>
    <string name="podesavanja">Podesavanja</string>
    <string name="dialog_o_applikaciji">Dialog O Applikaciji</string>
</resources>
