<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/menu_detail_update"
        app:showAsAction="ifRoom"
        android:title="@string/update"
        android:icon="@drawable/update"/>

    <item
        android:id="@+id/menu_detail_delete"
        app:showAsAction="ifRoom"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete_black_24dp"/>

    <item
        android:id="@+id/menu_detail_add_broj"
        app:showAsAction="ifRoom"
        android:title="@string/add_movie"
        android:icon="@drawable/add_broj"/>

    <item
        android:id="@+id/menu_detail_overflow"
        app:showAsAction="never"
        android:title="@string/podesavanja"
        android:icon="@drawable/ic_settings"/>

    <item
        android:id="@+id/menu_detail_dialog"
        app:showAsAction="never"
        android:title="@string/dialog_o_applikaciji"
        android:icon="@drawable/ic_about_app"/>


</menu>