<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorDark"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/dodaj_kontakt_naziv"
        android:hint="@string/naziv_kontakta"
        android:textColorHint="@color/colorRED"
        android:textColor="@color/colorRED"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/dodaj_kontakt_adresa"
        android:hint="@string/adresa_kontakta"
        android:textColorHint="@color/colorRED"
        android:textColor="@color/colorRED"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/dodaj_kontakt_preview"
            android:layout_width="80dp"
            android:layout_height="80dp" />

        <Button
            android:id="@+id/dodaj_kontakt_button_gallery"
            android:text="@string/otvori_galeriju_za_sliku"
            android:layout_toEndOf="@id/dodaj_kontakt_preview"
            android:textColor="@color/colorRED"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/dodaj_kontakt_button_confirm"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/potvrdi"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/dodaj_kontakt_button_cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/odustani"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

</LinearLayout>