<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/dodaj_broj_broj"
        android:textColorHint="@color/colorRED"
        android:textColor="@color/colorRED"
        android:hint="@string/unesite_broj_telefona"
        android:layout_width="match_parent"
        android:inputType="number"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/izabrite_tip_telefona"
        android:textAlignment="center"
        android:textColor="@color/colorRED"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/dodaj_broj_spinner"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/dodaj_broj_button_confirm"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/potvrdi"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/dodaj_broj_button_cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/odustani"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

</LinearLayout>